feat: Update project structure and add new features
- Rename project to "Jakarta EE Playground"
- Update `README.md` with new project description and structure
- Change artifactId in `pom.xml` to `jakartaee-playground`
- Add H2 database dependency in `pom.xml`
- Set finalName in Maven build configuration
- Create `GreetingBean` and `HelloJakartaBean` classes
- Add `Message` entity and `MessageService` for JPA
- Implement `MessageBean` for JSF
- Update `persistence.xml` with JPA configurations
- Add `jboss-web.xml` for WildFly deployment
- Update `web.xml` with new context parameters and data source
- Create `hello.xhtml` and `messages.xhtml` for JSF views

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.diegopatricio</groupId>
-    <artifactId>jakartaee-starter</artifactId>
+    <artifactId>jakartaee-playground</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -26,9 +26,15 @@
             <version>${jakartaee-api.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+        </dependency>
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
