Refactor layout and enhance dependencies
Replaced hello.xhtml with a new layout template and modularized header and footer components. Added dependencies for PrimeFaces and OWASP Java HTML Sanitizer. Modified GreetingBean scope and updated context root to "/jakarta".

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,6 @@
     </data-source>
 
     <welcome-file-list>
-        <welcome-file>hello.xhtml</welcome-file>
+        <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
